Curriculum Vitae name fix

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <a href="./quinta-28-Outubro/index.html">Lorem</a>
         </li>
         <li>
-            <a href="./sexta-29-Outubro/index.html">Lorem</a>
+            <a href="./sexta-29-Outubro/index.html">Curriculum Vitae</a>
         </li>
     </ul>
 </body>
