--- a/sexta-29-Outubro/index.html
+++ b/sexta-29-Outubro/index.html
@@ -6,102 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum Vitae</title>
-    <style>
-        body {
-            background-image: linear-gradient(to bottom , #5d7694, #b7cbe4, #5d7694);
-            font-family: Helvetica, Arial, sans-serif;
-            color: white;
-            text-shadow: 1px 1px 3px black;
-            margin: 0;
-            line-height: 1.6em;
-        }
-
-        header {
-            display: flex;
-            justify-content: space-evenly;
-            background-color: #324965;
-            position: fixed;
-            width: 100%;
-            box-shadow: 2px 2px 15px #b7cbe4;
-        }
-        
-        main {
-            display: flex;
-            flex-basis: 30%;
-            justify-content: space-around;
-            align-items: center;
-            height: 30vw;
-            padding-top: 1.5em;
-        }
-
-        main>div {
-            font-size: 9vw;
-        }
-
-        a,
-        a:link,
-        a:visited,
-        a:focus,
-        a:active {
-            text-decoration: none;
-            color:white
-        }
-        a:hover {
-            color: rgb(209, 171, 73);
-        }
-
-        img {
-            height: 70%;
-            border-radius: 50%;
-            box-shadow: 2px 2px 20px black;
-        }
-
-        div#coluna {
-            display: flex;
-            flex-flow: column wrap;
-
-        }
-
-        div#coluna>div {
-            background-color: #324965;
-            width: 42%;
-            margin-inline: 3em;
-            margin-bottom: 0.5em;
-            padding: 1em;
-            border-radius: 0.5em;
-            flex: 1 1 auto;
-        }
-        
-        div#coluna>div:hover {
-            box-shadow: 3px 3px 10px black;
-            padding: 1.3em;
-        }
-
-        div#contato {
-            display: flex;
-            justify-content: center;
-        }
-
-        div#contato img {
-            height: 40px;
-            margin-inline: 0.5em;
-        }
-
-        div#tecno {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-around;
-        }
-
-        footer {
-            box-shadow: 2px 2px 15px rgb(69, 91, 114);
-            padding: 0.5vw;
-        }
-
-        footer>p {
-            text-align: center;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
