--- a/sexta-29-Outubro/index.html
+++ b/sexta-29-Outubro/index.html
@@ -42,7 +42,7 @@
             </p>
         </div>
         
-        <div style="align-self: flex-end;" id="formacao">
+        <div style="align-self: flex-end; margin-top: -5em;" id="formacao">
             <h1>Formação</h1>
             <p>Ensino Médio - Centro Educacional Católica de Brasília</p>
             <p>2011-2013</p>
@@ -55,7 +55,7 @@
             <p>2021 - Atualmente</p>
         </div>
 
-        <div style="align-self: flex-start;" id="profissional">
+        <div style="align-self: flex-start; margin-top: -8em;" id="profissional">
             <h1>Profissional</h1>
             <p>Estagiário - Agência Nacional de Mineração</p>
             <p>ago. de 2017 - fev. de 2018</p>
@@ -63,7 +63,7 @@
                 confecção de mapas da série histórica 2011-2016.</p>
         </div>
         
-        <div style="align-self: flex-end;" id="competencias">
+        <div style="align-self: flex-end; margin-top: -3em;" id="competencias">
             <h1>Competências e recomendações</h1>
             <p>Inglês - compreende bem, lê bem, fala bem.</p>
             <p>Manuseio de sistemas de informações geográficas ArcGis/ QGIS</p>
@@ -92,16 +92,13 @@
 
         <h1 style="text-align: center;">Contato</h1>
 
-        <p>Telefone: (61) 98183-0677</p>
+        <p>Telefone: <a href="tel:+61981830677">(61)98183-0677</a></p>
         <p>Email: 
             <a href="mailto:hugosousa76@gmail.com">hugosousa76@gmail.com</a>
         </p>
 
         <p>Brasileiro, Solteiro, 25 anos</p>
         <p>Endereço: CAUB 1, Bairro Riacho Fundo 2. Brasília, Distrito Federal</p>
-        <p>Formação</p>
-        <p>Geologia - Universidade de Brasília</p>
-        <p>Aluno da segunda turma da Alpha Edtech - Instituto Alpha Lumen</p>
 
         <!-- Contato redes sociais -->
         <div id="contato">
