png icons added to tools div

--- a/sexta-29-Outubro/index.html
+++ b/sexta-29-Outubro/index.html
@@ -71,18 +71,23 @@
             <div id="tecno">
                 <div>
                     <p>HTML 5</p>
+                    <img src="icons/html.png" alt="html">
                 </div>
                 <div>
-                    <P>CSS 3</P>
+                    <p>CSS 3</p>
+                    <img src="icons/css png icon.png" alt="css">
                 </div>
                 <div>
                     <p>Photopea</p>
+                    <img src="icons/Photopea_logo-svg.png" alt="Photopea">
                 </div>
                 <div>
                     <p>Figma</p>
+                    <img src="icons/figma_icon_128866.png" alt="figma">
                 </div>
                 <div>
                     <p>Illustrator</p>
+                    <img src="icons/brand_adobe_illustrator_icon_159008.png" alt="Illustrator">
                 </div>
             </div>
 
