--- a/sexta-29-Outubro/index.html
+++ b/sexta-29-Outubro/index.html
@@ -45,20 +45,20 @@
         <div style="align-self: flex-end; margin-top: -5em;" id="formacao">
             <h1>Formação</h1>
             <p>Ensino Médio - Centro Educacional Católica de Brasília</p>
-            <p>2011-2013</p>
+            <p class="date">2011-2013</p>
             Inglês - Cooperativa de Idiomas do Brasil
-            <p>2013-2017</p>
+            <p class="date">2013-2017</p>
             Geologia - Universidade de Brasília
             </p>
-            <p>2014 - 2020</p>
+            <p class="date">2014 - 2020</p>
             <p>Curso de formação acelerada Alpha Edtech</p>
-            <p>2021 - Atualmente</p>
+            <p class="date">2021 - Atualmente</p>
         </div>
 
         <div style="align-self: flex-start; margin-top: -8em;" id="profissional">
             <h1>Profissional</h1>
             <p>Estagiário - Agência Nacional de Mineração</p>
-            <p>ago. de 2017 - fev. de 2018</p>
+            <p class="date">ago. de 2017 - fev. de 2018</p>
             <p>Reunir dados de produção do Cobre no Brasil ( Anuário Mineral Brasileiro, Relatório Anual de Lavra) e
                 confecção de mapas da série histórica 2011-2016.</p>
         </div>
