github icon fix

--- a/sexta-29-Outubro/index.html
+++ b/sexta-29-Outubro/index.html
@@ -112,7 +112,7 @@
             <a href="https://www.facebook.com/hugo.sousa.paiva/" target="_blank"><img
                     src="https://cdn-icons-png.flaticon.com/512/1384/1384005.png" alt="facebook"></a>
             <a href="https://github.com/hugo-paiva" target="_blank"><img
-                    src="https://www.pinpng.com/pngs/m/19-198450_github-icon-png-github-icon-transparent-png.png"
+                    src="icons/github.png"
                     alt="github"></a>
             <a href="https://www.instagram.com/h.ugopaiva/" target="_blank"><img
                     src="https://cdn-icons-png.flaticon.com/512/1384/1384015.png" alt="instagram"></a>
