graphical element spine added, social network icons' shadow more subtle

--- a/sexta-29-Outubro/index.html
+++ b/sexta-29-Outubro/index.html
@@ -35,6 +35,9 @@
             alt="Foto Hugo">
         <div>PAIVA</div>
     </main>
+
+    <div id="spine"></div>
+
     
     <div id="coluna">
         
@@ -123,6 +126,7 @@
         </div>
 
     </footer>
+
 </body>
 
 </html>
