--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
         <li>
             <a href="./sexta-29-Outubro/index.html">Curriculum Vitae</a>
         </li>
+        <li>
+            <a href="./desafio - high contrast/index.html">Curriculum-v0.2</a>
+        </li>
     </ul>
 </body>
 
