new font Gidole added, box shadow removed from main photo

--- a/desafio - high contrast/index.html
+++ b/desafio - high contrast/index.html
@@ -68,12 +68,12 @@
             <h1>Profissional</h1>
             <p>Estagiário - Agência Nacional de Mineração</p>
             <p class="date">ago. de 2017 - fev. de 2018</p>
-            <p>Reunir dados de produção do Cobre no Brasil ( Anuário Mineral Brasileiro, Relatório Anual de Lavra) e
+            <p>Função: reunir dados de produção do Cobre no Brasil ( Anuário Mineral Brasileiro, Relatório Anual de Lavra) e
                 confecção de mapas da série histórica 2011-2016.</p>
         </div>
         
         <div style="align-self: flex-end; margin-top: -3em;" id="competencias">
-            <h1>Competências e recomendações</h1>
+            <h1>Competências</h1>
             <p>Inglês - compreende bem, lê bem, fala bem.</p>
             <p>Manuseio de sistemas de informações geográficas ArcGis/ QGIS</p>
             <h1>Ferramentas e Tecnologias</h1>
