--- a/sexta-29-Outubro/index.html
+++ b/sexta-29-Outubro/index.html
@@ -110,7 +110,7 @@
         </p>
 
         <p>Brasileiro, Solteiro, 25 anos</p>
-        <p>Endereço: CAUB 1, Bairro Riacho Fundo 2. Brasília, Distrito Federal</p>
+        <p>Endereço: Bairro Riacho Fundo 2. Brasília, Distrito Federal</p>
 
         <!-- Contato redes sociais -->
         <div id="contato">
