projects' list updated

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
         <li>
             <a href="./desafio - high contrast/index.html">Curriculum-v0.2</a>
         </li>
+        <li>
+            <a href="./sexta-5-Novembro/index.html">Cópia website da WIX</a>
+        </li>
     </ul>
 </body>
 
