buttons included, fixed missing links on footer

--- a/sexta-5-Novembro/index.html
+++ b/sexta-5-Novembro/index.html
@@ -115,6 +115,8 @@
 
         </div>
 
+        <input type="button" value="Ver mais" id="vermais-btn">
+
     </section>
 
     <footer>
@@ -141,10 +143,10 @@
 
         <div>
             <ul>
-                <li>Envio e devoluções</li>
-                <li>Política da Loja</li>
-                <li>Formas de pagamento</li>
-                <li>FAQ</li>
+                <li><a href="#">Envio e devoluções</a></li>
+                <li><a href="#">Política da Loja</a></li>
+                <li><a href="#">Formas de pagamento</a></li>
+                <li><a href="#">FAQ</a></li>
             </ul>
         </div>
 
@@ -153,7 +155,7 @@
             </p>
             <input type="email" name="email" id="email">
         </br>
-            <input type="submit" value="email">
+            <input type="submit" value="Participar" id="participar-btn">
         </br>
             <img src="images/vector3.svg" alt="mão indicadora" style="transform: rotate(-90deg);">
         </div>
@@ -167,6 +169,14 @@
         </div>
         
     </footer>
+
+    <div id="bttn-left">
+        <a href="#"><img src="images/vector2.svg" alt=""><img src="images/vector2.svg" alt=""></a>
+    </div>
+    
+    <div id="bttn-right">
+        <a href="#"><img src="images/shopping-basket-with-two-handles-from-side-view_icon-icons.com_56137.svg" alt=""></a>
+    </div>
 </body>
 
 </html>
