link adquira todos os itens added

--- a/sexta-5-Novembro/index.html
+++ b/sexta-5-Novembro/index.html
@@ -71,6 +71,10 @@
             </div>
         </div>
 
+        <p style="text-align: center;">
+            <a href="#">Adquira todos os itens</a><img src="images/vector3.svg" alt="" style="width: 2rem;">
+        </p>
+
     </section>
 
     <section id="third">
