--- a/sexta-5-Novembro/index.html
+++ b/sexta-5-Novembro/index.html
@@ -71,7 +71,7 @@
             </div>
         </div>
 
-        <p style="text-align: center;">
+        <p style="text-align: center;padding-bottom: 4rem; margin: 0;">
             <a href="#">Adquira todos os itens</a><img src="images/vector3.svg" alt="" style="width: 2rem;">
         </p>
 
