added section zero pink, added smooth transition to buttons, added placeholder for input box email

--- a/sexta-5-Novembro/index.html
+++ b/sexta-5-Novembro/index.html
@@ -11,6 +11,12 @@
 
 <body>
 
+    <section id="zero">
+        <p>Assine <a href="#">aqui</a> e ganhe 10% de desconto
+
+        </p>
+    </section>
+
     <header>
         <h1>
             EQUILIBRIUM
@@ -157,7 +163,7 @@
         <div>
             <p>Increva-se e ganhe 10% na sua primeira compra
             </p>
-            <input type="email" name="email" id="email">
+            <input type="email" name="email" id="email" placeholder="   Insira o seu email aqui*">
         </br>
             <input type="submit" value="Participar" id="participar-btn">
         </br>
