hover, add button bottom right

--- a/sexta-5-Novembro/index.html
+++ b/sexta-5-Novembro/index.html
@@ -143,11 +143,11 @@
             <a href="https://www.instagram.com/wix/">
                 <img src="https://cdn-icons-png.flaticon.com/512/1384/1384015.png"alt="instagram"></a>
             <a href="https://br.pinterest.com/wixcom/_created/">
-                <img src="https://cdn-icons-png.flaticon.com/512/1384/1384015.png" alt=""></a>
+                <img src="images/pinterest-icon.svg" alt=""></a>
             <a href="https://www.facebook.com/WixPortugues">
-                <img src="https://cdn-icons-png.flaticon.com/512/1384/1384015.png" alt=""></a>
+                <img src="images/facebook-icon.svg" alt=""></a>
             <a href="https://www.youtube.com/user/Wix">
-                <img src="https://cdn-icons-png.flaticon.com/512/1384/1384015.png" alt=""></a>
+                <img src="images/youtube-icon.svg" alt=""></a>
 
         </div>
 
@@ -186,6 +186,10 @@
     
     <div id="bttn-right">
         <a href="#"><img src="images/shopping-basket-with-two-handles-from-side-view_icon-icons.com_56137.svg" alt=""></a>
+    </div>
+    
+    <div id="conversar-chat">
+        <button>Vamos conversar por chat!</button>
     </div>
 </body>
 
