list of projects updated

--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
             <a href="./desafio - high contrast/index.html">Curriculum-v0.2</a>
         </li>
         <li>
-            <a href="./sexta-5-Novembro/index.html">Cópia website da WIX</a>
+            <a href="./sexta-5-Novembro/index.html">Reconstrução website da WIX</a>
+        </li>
+        <li>
+            <a href="./segunda-8-Novembro/index.html">Reconstrução site Passeadora de Caes</a>
         </li>
     </ul>
 </body>
