--- a/segunda-8-Novembro/index.html
+++ b/segunda-8-Novembro/index.html
@@ -27,8 +27,7 @@
 
         <h1>Ana</h1>
 
-        <p>A Passeadora de Cães</p>
-
+        <p>A PASSEADORA DE CÃES</p>
 
         <input type="button" value="Vamos dar uma volta" class="button">
 
@@ -56,11 +55,12 @@
 
     <section id="terceira-sec">
 
-        <h2>Agende um passeio</h2>
+        <h2 style="align-self: flex-start;">Agende um passeio</h2>
 
         <div>
             <img src="images/dogs-no-passeio.webp" alt="dogs-no-passeio">
-            <div style="background-color: #F4ECE1;">
+
+            <div style="background-color: #F4ECE1; ">
 
                 <h3>Passeio ao meio dia</h3>
 
@@ -101,6 +101,7 @@
 
             <div>
                 <p>Disponível nos seguintes bairros:</p>
+                <br>
 
                 <p>Pinheiros</p>
 
