lista de sites atualizada

--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
         <li>
             <a href="./segunda-8-Novembro/index.html">Reconstrução site Passeadora de Caes</a>
         </li>
+        <li>
+            <a href="./terca-9-Novembro/index.html">Reconstrução site de Sorvetes Artesanais</a>
+        </li>
     </ul>
 </body>
 
