lista de site atualizada

--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
         <li>
             <a href="./terca-9-Novembro/index.html">Reconstrução site de Sorvetes Artesanais</a>
         </li>
+        <li>
+            <a href="./projeto-formiliere/index.html">Projeto Formilière</a>
+        </li>
     </ul>
 </body>
 
