switch side icons

--- a/projeto-formiliere/chef-mode.html
+++ b/projeto-formiliere/chef-mode.html
@@ -14,8 +14,13 @@
     <aside>
 
         <img src="svg-icons/btn menu de mais opções.svg" alt="botão menu" id="menu">
+        <div>
 
-        <a href="index.html"><img src="svg-icons/yellow-switch.svg" alt="switch" id="switch"></a>
+            <img src="svg-icons/switch-icons-purple/chef-switch-icon.svg" alt="chef-mode">
+            <a href="index.html"><img src="svg-icons/yellow-switch.svg" alt="switch" id="switch"></a>
+            <img src="svg-icons//switch-icons-purple/customer-swith-icon.svg" alt="customer-mode">
+
+        </div>
 
         <div id="daFormiga">
 
