--- a/projeto-formiliere/index.html
+++ b/projeto-formiliere/index.html
@@ -14,7 +14,11 @@
 
         <img src="svg-icons/btn menu de mais opções.svg" alt="botão menu" id="menu">
 
-        <a href="chef-mode.html"><img src="svg-icons/switch.svg" alt="switch" id="switch"></a>
+        <div>
+            <img src="svg-icons/chef-switch-icon.svg" alt="chef-mode">
+            <a href="chef-mode.html"><img src="svg-icons/switch.svg" alt="switch" id="switch"></a>
+            <img src="svg-icons/customer-switch-icon.svg" alt="customer-mode">
+        </div>
 
         <div id="daFormiga">
 
