new post its with hovering effects

--- a/projeto-formiliere/chef-mode.html
+++ b/projeto-formiliere/chef-mode.html
@@ -12,19 +12,21 @@
 
 <body style="background-color: rgb(20, 19, 19);">
     <aside>
+        <div id="switch-area">
 
-        <img src="svg-icons/btn menu de mais opções.svg" alt="botão menu" id="menu">
-        <div>
+            <img src="svg-icons/btn menu de mais opções.svg" alt="botão menu" id="menu">
+            <div>
 
-            <img src="svg-icons/switch-icons-purple/chef-switch-icon.svg" alt="chef-mode">
-            <a href="index.html"><img src="svg-icons/yellow-switch.svg" alt="switch" id="switch"></a>
-            <img src="svg-icons//switch-icons-purple/customer-swith-icon.svg" alt="customer-mode">
+                <img src="svg-icons/switch-icons-purple/chef-switch-icon.svg" alt="chef-mode">
+                <a href="index.html"><img src="svg-icons/yellow-switch.svg" alt="switch" id="switch"></a>
+                <img src="svg-icons//switch-icons-purple/customer-swith-icon.svg" alt="customer-mode">
 
+            </div>
         </div>
 
         <div id="daFormiga">
 
-            <img src="svg-icons/formiga.svg" alt="formiga">
+            <img src="svg-icons/formiga.svg" alt="formiga" id="formiga-mimi">
             <img src="svg-icons/balao formiga-eu-sou-mimi-posso-ajudar.svg" alt="" id="balao-formiga">
         </div>
 
@@ -37,7 +39,7 @@
         <!-- <svg width="800" height="800">
             <rect width="400" height="400" transform="translate(120,100)" transform="rotate(45)" style="fill:#9F61F0;stroke-width:3;stroke:rgb(0,0,0) />
         </svg> -->
-        
+
         <img src="svg-icons/Post-it-Salgados.svg" alt="" class="postit">
         <img src="svg-icons/doces-da-Vani.svg" alt="" class="postit">
         <img src="svg-icons/mural-de-vendas.svg" alt="" class="postit">
