--- a/projeto-formiliere/index.html
+++ b/projeto-formiliere/index.html
@@ -12,17 +12,20 @@
 <body>
     <aside>
 
-        <img src="svg-icons/btn menu de mais opções.svg" alt="botão menu" id="menu">
+        <div id="switch-area">
+            <img src="svg-icons/btn menu de mais opções.svg" alt="botão menu" id="menu">
 
-        <div>
-            <img src="svg-icons/chef-switch-icon.svg" alt="chef-mode">
-            <a href="chef-mode.html"><img src="svg-icons/switch.svg" alt="switch" id="switch"></a>
-            <img src="svg-icons/customer-switch-icon.svg" alt="customer-mode">
+            <div>
+                <img src="svg-icons/chef-switch-icon.svg" alt="chef-mode">
+                <a href="chef-mode.html"><img src="svg-icons/switch.svg" alt="switch" id="switch"></a>
+                <img src="svg-icons/customer-switch-icon.svg" alt="customer-mode">
+            </div>
+
         </div>
 
         <div id="daFormiga">
 
-            <img src="svg-icons/formiga.svg" alt="formiga">
+            <img src="svg-icons/formiga.svg" alt="formiga" id="formiga-mimi">
             <img src="svg-icons/balao formiga-eu-sou-mimi-posso-ajudar.svg" alt="" id="balao-formiga">
         </div>
 
@@ -32,19 +35,61 @@
 
     <main>
 
-        <!-- <svg width="800" height="800">
-            <rect width="400" height="400" transform="translate(120,100)" transform="rotate(45)" style="fill:#9F61F0;stroke-width:3;stroke:rgb(0,0,0) />
-        </svg> -->
-        
-        <img src="svg-icons/Post-it-Salgados.svg" alt="" class="postit">
-        <img src="svg-icons/doces-da-Vani.svg" alt="" class="postit">
-        <img src="svg-icons/mural-de-vendas.svg" alt="" class="postit">
-        <img src="svg-icons/Post it Reunião.svg" alt="" class="postit">
-        <img src="svg-icons/post it rosa.svg" alt="" class="postit">
-        <img src="svg-icons/post it rosa-1.svg" alt="" class="postit">
-        <img src="svg-icons/Post it Pintor-1.svg" alt="" class="postit">
-        <img src="svg-icons/Post it Pintor.svg" alt="" class="postit">
-        <img src="svg-icons/_Group_.svg" alt="" class="postit">
+        <ul>
+            <li>
+                <a href="#">
+                    <h1>Salgados do Pedrão</h1>
+                    <p>Promoção Especial</p>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <h1>Doces da Vani</h1>
+                    <p>Brigadeiro 1 real</p>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <h1>caraqui</h1>
+                    <p>ois</p>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <h1></h1>
+                    <p></p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <h1></h1>
+                    <p></p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <h1></h1>
+                    <p></p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <h1></h1>
+                    <p></p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <h1></h1>
+                    <p></p>
+                </a>
+            </li>
+        </ul>
+
     </main>
 
     <article>
