--- a/projeto-formiliere/index.html
+++ b/projeto-formiliere/index.html
@@ -11,35 +11,38 @@
 
 <body>
     <aside>
-        <div id="menu-lat">
-            <div class="menu-opcao">
-                <img id="user-img" src="" alt="">
-                <h3>Olá Talita Compradora</h3>
+        <div>
+            <input id="botao-menu" type="checkbox" style="width: 9%;height: 9%;">
+            <div id="menuL">
+                <div class="menu-opcao">
+                    <img id="user-img" src="" alt="">
+                    <h3>Olá Talita Compradora</h3>
+                </div>
+                <div class="menu-opcao">
+                    <img class="menu-icons" src="/svg-icons/wlupa.svg" alt="">
+                    <h4>Buscar</h4>
+                </div>
+                <div class="menu-opcao">
+                    <img class="menu-icons" src="/svg-icons/wsino.svg" alt="">
+                    <h4>Notificações</h4>
+                </div>
+                <div class="menu-opcao">
+                    <img class="menu-icons" src="/svg-icons/wcarinho.svg" alt="">
+                    <h4>Meus Pedidos</h4>
+                </div>
+                <div class="menu-opcao">
+                    <img class="menu-icons" src="/svg-icons/wtag.svg" alt="">
+                    <h4>Ofertas do Dia</h4>
+                </div>
+                <div class="menu-opcao">
+                    <img class="menu-icons" src="/svg-icons/wconta.svg" alt="">
+                    <h4>Minha Conta</h4>
+                </div>
             </div>
-            <div class="menu-opcao">
-                <img class="menu-icons" src="/svg-icons/wlupa.svg" alt="">
-                <h4>Buscar</h4>
+            <div class="img-menu">
+                <img src="svg-icons/btn menu de mais opções.svg" alt="botão menu" id="menu">
             </div>
-            <div class="menu-opcao">
-                <img class="menu-icons" src="/svg-icons/wsino.svg" alt="">
-                <h4>Notificações</h4>
-            </div>
-            <div class="menu-opcao">
-                <img class="menu-icons" src="/svg-icons/wcarinho.svg" alt="">
-                <h4>Meus Pedidos</h4>
-            </div>
-            <div class="menu-opcao">
-                <img class="menu-icons" src="/svg-icons/wtag.svg" alt="">
-                <h4>Ofertas do Dia</h4>
-            </div>
-            <div class="menu-opcao">
-                <img class="menu-icons" src="/svg-icons/wconta.svg" alt="">
-                <h4>Minha Conta</h4>
-            </div>
-        </div>
-        <div class="botao-menu">
-            <img src="svg-icons/btn menu de mais opções.svg" alt="botão menu" id="menu">
-        </div>
+        </div>    
         <div id="switch-area">
             
             <div>
