menu is working fine

--- a/projeto-formiliere/chef-mode.html
+++ b/projeto-formiliere/chef-mode.html
@@ -14,7 +14,37 @@
     <aside>
         <div id="switch-area">
 
-            <img src="svg-icons/btn menu de mais opções.svg" alt="botão menu" id="menu">
+            <input type="checkbox" name="menu" id="side-menu-checkbox">
+            <div class="side-menu">
+
+                <div class="menu-opcao">
+                    <img id="user-img" src="" alt="">
+                    <h3>Olá {Vendedor}</h3>
+                </div>
+                <div class="menu-opcao">
+                    <img class="menu-icons" src="/svg-icons/wlupa.svg" alt="">
+                    <h4>lorem</h4>
+                </div>
+                <div class="menu-opcao">
+                    <img class="menu-icons" src="/svg-icons/wsino.svg" alt="">
+                    <h4>lorem</h4>
+                </div>
+                <div class="menu-opcao">
+                    <img class="menu-icons" src="/svg-icons/wcarinho.svg" alt="">
+                    <h4>lorem</h4>
+                </div>
+                <div class="menu-opcao">
+                    <img class="menu-icons" src="/svg-icons/wtag.svg" alt="">
+                    <h4>lorem</h4>
+                </div>
+                <div class="menu-opcao">
+                    <img class="menu-icons" src="/svg-icons/wconta.svg" alt="">
+                    <h4>lorem</h4>
+                </div>
+
+            </div>
+
+            <img src="svg-icons/btn menu de mais opções.svg" alt="botão menu" class="menu-icon">
             <div>
 
                 <img src="svg-icons/switch-icons-purple/chef-switch-icon.svg" alt="chef-mode">
