coments explaining blocks of code added

--- a/projeto-formiliere/index.html
+++ b/projeto-formiliere/index.html
@@ -13,7 +13,9 @@
     <aside>
         
         <div id="switch-area">
-        
+
+
+            <!-- Conteúdos do menu lateral -->
             <input type="checkbox" name="menu" id="side-menu-checkbox">
             <div class="side-menu">
 
@@ -55,6 +57,7 @@
 
         </div>
 
+        <!-- Ajuda com a formiga mimi -->
         <div id="daFormiga">
 
             <img src="svg-icons/formiga.svg" alt="formiga" id="formiga-mimi">
@@ -63,6 +66,7 @@
     </aside>
 
 
+    <!-- Quadro de post-its -->
     <main>
 
         <ul id="vendas">
