Background image removed from the board: now it uses a solid color in common with sales page. Lower size on the menu and switch icons, chef-mode background color fix and purple menu button color fix.

--- a/projeto-formiliere/chef-mode.html
+++ b/projeto-formiliere/chef-mode.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="chefs.css">
 </head>
 
-<body style="background-color: rgb(20, 19, 19);">
+<body>
     <aside>
         <div id="switch-area">
 
@@ -44,12 +44,12 @@
 
             </div>
 
-            <img src="svg-icons/btn menu de mais opções.svg" alt="botão menu" class="menu-icon">
+            <img src="svg-icons/btn de mais opções-purple.svg" alt="botão menu" class="menu-icon">
             <div>
 
-                <img src="svg-icons/switch-icons-purple/chef-switch-icon.svg" alt="chef-mode">
+                <img src="svg-icons/switch-icons-purple/chef-switch-icon.svg" alt="chef-mode" class="costumer-chef-icons">
                 <a href="index.html"><img src="svg-icons/yellow-switch.svg" alt="switch" id="switch"></a>
-                <img src="svg-icons//switch-icons-purple/customer-swith-icon.svg" alt="customer-mode">
+                <img src="svg-icons//switch-icons-purple/customer-swith-icon.svg" alt="customer-mode" class="costumer-chef-icons">
 
             </div>
         </div>
