--- a/projeto-formiliere/index.html
+++ b/projeto-formiliere/index.html
@@ -50,9 +50,9 @@
 
             
             <div>
-                <img src="svg-icons/chef-switch-icon.svg" alt="chef-mode">
+                <img src="svg-icons/chef-switch-icon.svg" alt="chef-mode" class="costumer-chef-icons">
                 <a href="chef-mode.html"><img src="svg-icons/switch.svg" alt="switch" id="switch"></a>
-                <img src="svg-icons/customer-switch-icon.svg" alt="customer-mode">
+                <img src="svg-icons/customer-switch-icon.svg" alt="customer-mode" class="costumer-chef-icons">
             </div>
 
         </div>
