box-shadow changed to a more consistent design between diferent pages, using grayish shadows, border-radius are now the same as well

--- a/projeto-formiliere/index.html
+++ b/projeto-formiliere/index.html
@@ -15,12 +15,13 @@
         <div id="switch-area">
 
 
-            <!-- Conteúdos do menu lateral -->
             <input type="checkbox" name="menu" id="side-menu-checkbox">
+
+            <!-- Conteúdos do menu lateral -->
             <div class="side-menu">
 
                 <div class="menu-opcao">
-                    <img id="user-img" src="" alt="">
+                    <img id="user-img" src="https://avatars.githubusercontent.com/u/85463337?v=4" alt="">
                     <h3>Olá Talita Compradora</h3>
                 </div>
                 <div class="menu-opcao">
@@ -48,12 +49,14 @@
 
                 <img src="svg-icons/btn menu de mais opções.svg" alt="botão menu" class="menu-icon">
 
-            
             <div>
+                
                 <img src="svg-icons/chef-switch-icon.svg" alt="chef-mode" class="costumer-chef-icons">
                 <a href="chef-mode.html"><img src="svg-icons/switch.svg" alt="switch" id="switch"></a>
                 <img src="svg-icons/customer-switch-icon.svg" alt="customer-mode" class="costumer-chef-icons">
+
             </div>
+
 
         </div>
 
@@ -62,7 +65,9 @@
 
             <img src="svg-icons/formiga.svg" alt="formiga" id="formiga-mimi">
             <img src="svg-icons/balao formiga-eu-sou-mimi-posso-ajudar.svg" alt="" id="balao-formiga">
+
         </div>
+
     </aside>
 
 
