--- a/projeto-formiliere/chef-mode.html
+++ b/projeto-formiliere/chef-mode.html
@@ -12,13 +12,17 @@
 
 <body>
     <aside>
+        
+
         <div id="switch-area">
 
             <input type="checkbox" name="menu" id="side-menu-checkbox">
+
+            <!-- Conteúdos do menu lateral -->
             <div class="side-menu">
 
                 <div class="menu-opcao">
-                    <img id="user-img" src="" alt="">
+                    <img id="user-img" src="https://avatars.githubusercontent.com/u/85463337?v=4" alt="">
                     <h3>Olá Talita Vendedora</h3>
                 </div>
                 <div class="menu-opcao">
@@ -52,16 +56,22 @@
                 <img src="svg-icons//switch-icons-purple/customer-swith-icon.svg" alt="customer-mode" class="costumer-chef-icons">
 
             </div>
+
         </div>
 
+        <!-- Ajuda com a formiga mimi -->
         <div id="daFormiga">
 
             <img src="svg-icons/formiga.svg" alt="formiga" id="formiga-mimi">
             <img src="svg-icons/balao formiga-eu-sou-mimi-posso-ajudar.svg" alt="" id="balao-formiga">
+
         </div>
 
 
     </aside>
+
+
+    <!-- Quadro de post-its -->
     <main>
 
         <ul id="vendas">
