--- a/projeto-formiliere/pedrao-store/pedrao-store.html
+++ b/projeto-formiliere/pedrao-store/pedrao-store.html
@@ -23,7 +23,7 @@
 
         </header>
         <section>
-
+            <!-- De acordo as especificações W3C toda <section> precisa ter uma tag de título(<h1>, <h2>...). -->
             <div class="product">
                 <div class="product-text">
 
